feat:新增加入redis並完成配置，新增單元測試及例外處置